--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -346,7 +346,7 @@ body {
     }
   }
 
-  &--empty {
+  &__empty {
     margin: 80px auto;
     width: 620px;
     text-align: center;
@@ -364,7 +364,7 @@ body {
       color: #777777;
     }
 
-    icon {
+    .icon {
       position: relative;
       top: 2px;
     }
@@ -375,7 +375,7 @@ body {
       margin: 45px auto 60px;
     }
 
-    .button--black {
+    .button__black {
       padding: 12px 0 14px;
       width: 230px;
       margin: 0 auto;
