--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import './variables';
-@import './libs/normalize';
+@import "./variables";
+@import "./libs/normalize";
 
-@import './components/all';
+@import "./components/all";
 
 body {
   background-color: $background;
@@ -24,6 +24,10 @@ body {
 .content {
   padding: 40px 0;
 
+  @media (max-width: 645px) {
+    padding: 20px 0;
+  }
+
   &__error-info {
     margin: 100px auto;
     width: 500px;
@@ -45,6 +49,11 @@ body {
     font-size: 38px;
     margin-top: 60px;
     margin-bottom: 50px;
+
+    @media (max-width: 645px) {
+      text-align: center;
+      margin-top: 40px;
+    }
   }
 
   &__items {
@@ -75,7 +84,8 @@ body {
         overflow: auto;
 
         ul {
-          width: 785px;
+          width: 564px;
+          padding-bottom: 10px;
         }
       }
 
@@ -101,6 +111,10 @@ body {
       .categories {
         margin-top: 30px;
       }
+
+      .sort {
+        padding-left: 8px;
+      }
       flex-direction: column-reverse;
     }
   }
@@ -119,7 +133,46 @@ body {
   }
 }
 
+.container-fullpizza {
+  width: $container-width;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+
+  img {
+    max-width: 800px;
+    margin: 0 auto;
+    padding-left: 5%;
+
+    @media (max-width: 820px) {
+      margin: 0;
+    }
+  }
+
+  &__description {
+    padding-left: 3%;
+    font-size: 16px;
+    text-align: center;
+
+    h2 {
+      font-size: 3em;
+      margin: 30px 0 35px 0;
+    }
+
+    h3 {
+      font-size: 2em;
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 820px) {
+      font-size: 10px;
+      padding-left: 0;
+    }
+  }
+}
+
 .cart {
+  font-size: 16px;
   &__top {
     display: flex;
     justify-content: space-between;
