--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,8 +1,12 @@
-@import '../variables';
+@import "../variables";
 
 .header {
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
+
+  @media (max-width: 645px) {
+    padding: 20px 0;
+  }
 
   .container {
     display: flex;
@@ -13,7 +17,7 @@
       flex-direction: column;
 
       .header__cart {
-        margin-top: 20px;
+        margin-top: 8px;
       }
     }
   }
@@ -35,6 +39,10 @@
 
     p {
       color: #7b7b7b;
+
+      @media (max-width: 1060px) {
+        display: none;
+      }
     }
 
     @media (max-width: 645px) {
