--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,15 +17,16 @@ body {
 
   @media (max-width: 645px) {
     width: calc(100vw - 30px);
-    margin-top: 15px;
+    height: calc(100vh - 30px);
+    margin: 15px auto;
   }
 }
 
 .content {
-  padding: 40px 0;
+  padding: 10px 0;
 
   @media (max-width: 645px) {
-    padding: 20px 0;
+    padding: 0 0 10px 0;
   }
 
   &__error-info {
@@ -127,6 +128,11 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
+    @media (max-width: 820px) {
+      margin: 20px auto;
+    }
+
     .content__title {
       margin: 0;
     }
@@ -160,7 +166,7 @@ body {
     }
 
     h3 {
-      font-size: 2em;
+      font-size: 1.7em;
       margin-bottom: 30px;
     }
 
@@ -173,6 +179,15 @@ body {
 
 .cart {
   font-size: 16px;
+
+  @media (max-width: 820px) {
+    font-size: 13px;
+  }
+
+  @media (max-width: 645px) {
+    font-size: 10px;
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
@@ -182,7 +197,7 @@ body {
   .content__title {
     display: flex;
     align-items: center;
-    font-size: 32px;
+    font-size: 1.7em;
 
     svg {
       position: relative;
@@ -207,7 +222,7 @@ body {
       display: inline-block;
       margin-left: 7px;
       color: #b6b6b6;
-      font-size: 18px;
+      font-size: 1.2em;
     }
 
     span,
@@ -233,17 +248,30 @@ body {
   }
 
   &__item {
-    display: flex;
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    // grid-auto-rows: minmax(100px, auto);
+    grid-template-areas: "img info count price remove";
     border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
 
+    @media (max-width: 540px) {
+      grid-template-areas:
+        "img img info info info"
+        "count price price price remove";
+      row-gap: 25px;
+    }
+
     &-img {
       display: flex;
       align-items: center;
-      margin-right: 15px;
-      width: 10%;
+      margin-right: 40px;
+      grid-area: img;
+
+      @media (max-width: 645px) {
+        margin-right: 0px;
+      }
 
       img {
         width: 80px;
@@ -255,17 +283,17 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
+      grid-area: info;
 
       h3 {
         font-weight: bold;
-        font-size: 22px;
+        font-size: 1.4em;
         line-height: 27px;
         letter-spacing: 0.01em;
       }
 
       p {
-        font-size: 18px;
+        font-size: 1em;
         color: #8d8d8d;
       }
     }
@@ -274,7 +302,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
+      grid-area: count;
 
       &-minus {
         svg {
@@ -307,7 +335,8 @@ body {
       }
 
       b {
-        font-size: 22px;
+        font-size: 1.4em;
+        margin: 0 5px;
       }
     }
 
@@ -315,12 +344,13 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
+      grid-area: price;
 
       b {
         font-weight: bold;
-        font-size: 22px;
+        font-size: 1.4em;
         letter-spacing: 0.01em;
+        margin-right: -20px;
       }
     }
 
@@ -328,7 +358,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      width: 4%;
+      grid-area: remove;
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -360,12 +390,24 @@ body {
   &__bottom {
     margin: 50px 0;
 
+    @media (max-width: 645px) {
+      margin: 20px 0;
+    }
+
     &-details {
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 400px) {
+        flex-direction: column;
+
+        :first-child {
+          margin-bottom: 1.2em;
+        }
+      }
+
       span {
-        font-size: 22px;
+        font-size: 1.7em;
 
         &:last-of-type {
           b {
@@ -379,6 +421,13 @@ body {
       display: flex;
       justify-content: space-between;
       margin-top: 40px;
+      column-gap: 1em;
+
+      @media (max-width: 400px) {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1em;
+      }
 
       .go-back-btn {
         display: flex;
