--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -43,6 +43,18 @@
     min-width: 32px;
     padding: 0;
     border-width: 2px;
+
+    @media (max-width: 820px) {
+      width: 23px;
+      height: 23px;
+      min-width: 23px;
+    }
+
+    @media (max-width: 645px) {
+      width: 15px;
+      height: 15px;
+      min-width: 15px;
+    }
   }
 
   &__black {
