--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,17 +17,12 @@ body {
 
   @media (max-width: 645px) {
     width: calc(100vw - 30px);
-    height: calc(100vh - 30px);
     margin: 15px auto;
   }
 }
 
 .content {
-  padding: 10px 0;
-
-  @media (max-width: 645px) {
-    padding: 0 0 10px 0;
-  }
+  padding: 15px 0 30px 0;
 
   &__error-info {
     margin: 100px auto;
@@ -129,8 +124,8 @@ body {
     max-width: 820px;
     margin: 90px auto;
 
-    @media (max-width: 820px) {
-      margin: 20px auto;
+    @media (max-width: 1060px) {
+      margin: 0 auto 20px auto;
     }
 
     .content__title {
@@ -254,7 +249,7 @@ body {
     grid-template-areas: "img info count price remove";
     border-top: 1px solid $gray-line;
     padding-top: 30px;
-    margin-top: 30px;
+    margin-top: 18px;
 
     @media (max-width: 540px) {
       grid-template-areas:
